# project-bibo-youtube-v2

./: .env.example  .gitignore  .windsurf.md  API.md  APP_BRIEF.md  ARCHITECTURE.md  CLAUDE.md  INSTALL.bat  README.md  SETUP.md  START.bat  WINDOWS_SETUP.md  gemini.md  main.py  overview.txt  project_setup.sh  pyproject.toml  requirements.txt  run_app.sh  session-2026-01-30.md  session-2026-02-01.md  session-2026-02-04.md  session-2026-02-10.md  session-2026-02-14.md  session-2026-02-16.md  session-2026-02-17.md  session-2026-02-24.md
.streamlit/: config.toml
1-transcribe/: README.md  transcriber_vertex.py
2-summarize/: README.md
3-title-desc/: README.md
4-synthesize/: README.md
5-visualize/: README.md
app/: __init__.py  main.py  state.py  utils.py
app/components/: __init__.py  sidebar.py
app/pages/: 1_inputs.py  2_script.py  3_audio.py  4_metadata.py  5_images.py  6_video.py  __init__.py
config/: config.json  models.json
credentials/: README.md
docs/: 01_SYSTEM_OVERVIEW.md  02_PIPELINE_MODULES.md  03_AI_MODELS_AND_INTEGRATIONS.md  08_ALTERNATE_AI_ROUTES.md  PROMPT_ENGINEERING_MANUAL.md  README.md
docs/MAIN DOCS/: 01_SYSTEM_OVERVIEW.md  (+7 more)
plan_docs/: app_factory_vision.md  extraction_playbook.md  progress_tracker.md
src/: image_creation.py  image_prompting-anthropic.py  image_prompting.py  logger.py  metadata_generation.py  summarization-anthropic.py  summarization.py  summarization_v2.py  text_to_speech.py  text_to_speech_openai.py  thumbnail_generation.py  transcription.py  transcription_openai.py  video_composition.py
utils/: .gitkeep
(+30 files in other folders)
